<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="number"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <!--
        <RingtonePreference
            android:key = "Ringtone"
            android:summary = "Choose a song"
            android:title="Ringtone preference" />
        -->

        <SwitchPreferenceCompat
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="edit_text_preference_1"
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:title="@string/attachment_title" />



    </PreferenceCategory>

</PreferenceScreen>
