<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_handwash">

    <fragment
        android:id="@+id/navigation_handwash"
        android:name="com.example.musicstopwatch.ui.Handwashing.HandwashFragment"
        android:label="@string/title_handwash"
        tools:layout="@layout/fragment_hadwash" />

    <fragment
        android:id="@+id/navigation_toothbrush"
        android:name="com.example.musicstopwatch.ui.Toothbrush.ToothbrushFragment"
        android:label="@string/title_toothbrush"
        tools:layout="@layout/fragment_toothbrush" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.musicstopwatch.ui.Settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
